public/styles.css
* {
    box-sizing: border-box;
    padding: 0;
    font-family: 'Consolas', monospace;
    scroll-behavior: smooth;
    background: #0d0d0f;
    background: linear-gradient(to right, #232235, #23152f);
    
}
.body{
    display:flex;
    margin:0px;
    overflow: hidden;
}
/* navbar */
.ghost_navbar{
    display:flex;
    position:sticky;
    align-items: center;
    justify-content: center;
    width: 100%;
    top:0;
    z-index: 12;
}
 
.navbar{
    display: flex;
    margin-left: -10px;
    position: absolute;
    top: -100px;
    background: linear-gradient(to right, #232235, #23152f);
    justify-content: center;
    align-items: center;
    overflow: hidden;
    width: 100%;
    z-index: 9;
    box-shadow: -10px 1px 10px 0px;
    height: 80px;
    transition: 0.2s ease-in;
}

.navbar.isActive{
    top:100%;
    transition: 0.3s ease-out; 
}

.navbar_container{
    display: flex;
    background: transparent;
    justify-content: space-between;
    align-items: center;
    z-index: 9999;
    width: 100%;
}

.navbar_logo{
    display: flex;
    background: transparent;
    align-items: center;
    justify-content: center;
    color: #f1f1ff;
    text-decoration: none;
    font-size: 50px;
    padding: 20px;
    transition: 0.2s ease;
}

.navbar_menu{
    display: flex;
    flex-direction: row;
    margin-right: 10px;
    justify-content: flex-end;
    align-items: center;
    background: transparent;
    list-style-type: none;
}

.navbar_item{
    background: transparent;
    margin: 15px;
}

.navbar_link{
    display:inline-block;
    background: transparent;
    white-space: nowrap;
    word-spacing: -0.3ch;
    text-decoration: none;
    font-size: 24px;
    color: #73737d;
    transition: 0.5s ease;
}

.navbar_link:hover{
    color:#f0f0ff;
    transition: 0.5s ease;
}

.navbar_burger{
    display: none;
}


.hero {
    padding: 0px;
    margin:0px;
    top: 0;
    background: transparent;
}

.section_container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    height: 90%;
    text-align: center;
    padding: 0px;
    background: transparent;
}

.heading {
    font-size: 130px;
    margin-bottom: 24px;
    background: #ffffff;
    background: -webkit-linear-gradient(to right,  #fcedff , #f1f1ff);
    background: linear-gradient(to right, #fcedff , #f1f1ff);
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
    margin-top: 20px;
}


#verification_heading{
    font-size: 50px;
}

.emoji{
    background: transparent;
    -webkit-background-clip: initial;
    -moz-background-clip: initial;
    -webkit-text-fill-color: initial;
    -moz-text-fill-color: initial;
    font-size: 100px;
}

.image {
    cursor: pointer;
    margin : 30px;
    border-radius: 6px;
    width: 300px;
    height: 300px;
    transition: all 0.5s ease;
}

.image:hover {
    width : calc(300px*1.05);
    height: calc(300px*1.05);
    border-radius: calc(6px*1.05);
    margin-top: calc(30px - (300px*0.05)/2);
    margin-bottom: calc(30px - (300px*0.05)/2);
    transition: all 0.5s ease;
}

.image.isActive{
    width: 0px;
    height: 0px;
    margin-top: calc(15px + 300px/2);
    margin-bottom:calc(15px + 300px/2);
    transition: all 0.4s ease-out;
}


.description {
    font-size: 20px;
    background: #ffffff;
    background: -webkit-linear-gradient(to right, #ffffff, #f8dffd);
    background: linear-gradient(to right, #ffffff, #f8dffd);
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
}

.btn {
    border: none;
    text-decoration: none;
    cursor: pointer;
    background: #ff7301;
    background: -webkit-linear-gradient(to right, #ffffff, #ffffff,#ff7301);
    background: linear-gradient(to right, #ffffff, #ffffff, #ff7301);
    height: 35px;
    width: 120px;
    text-align: center;
    vertical-align: middle;
    border-radius: 5px;
    margin: 15px;
    transition: all 0.5s ease;
}

.docs_span{
    font-size: 200%;
    background: #000000;
    background: -webkit-linear-gradient(to right,#ff7301, #d8790b);
    background: linear-gradient(to right, #ff7301, #d8790b);
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
}

.check_cont{
    display: none;
    width: 350px;
    height: 100px;
    align-items: center;
    background: transparent;
}
#checkthis{
    display: none;
    align-items: center;
    width: 100%;
    font-size: 40px;
    background: transparent;
}

#checkthis.isActive{ 
    display: flex;
    text-align: left;
    color: #f1f1ff;
    overflow: hidden;
    border-right: .15em solid rgb(255, 255, 255);
    white-space: nowrap;
    letter-spacing: .15rem;
    animation-delay: 2s;
    animation: typing2 3s steps(20, end), blink-caret 0.75s step-end infinite ;
    animation-fill-mode: forwards;
}

.img2asci_cont{
    background: transparent;
    width: 500px;
}

.img2ascii {
    display: none;
    width: 0;
    background: transparent;
    font-size: 4.6px;
    line-height: 130%;
}

.img2ascii.isActive {
    display: flex;
    max-width: 6000px;
    text-align: left;
    overflow: hidden;
    color: aliceblue;
    letter-spacing: .1em; /* Adjust as needed */
    animation: typing 4s steps(100, end);
    animation-delay: 5.5s;
    animation-fill-mode: forwards;
}

/* tryit form */

#tryit_heading{
    font-size: 60px;
    margin-top: 100px;
}

.tryit_form{
    background: transparent;
    border: 1px solid #cecedb;
    border-radius: 15px;
    background: linear-gradient(to right, #28273b, #2d193f);
    max-width: 80%;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: center;
    flex-wrap: wrap;
}
.form_cont {
    width: 350px;
    height: 100px;
    display: flex;
    padding:0px;
    overflow: hidden;
    border: 1px solid #cecedb;
    border-radius: 15px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 30px;
    background: linear-gradient(to right, #232235, #23152f);
    z-index: inherit;
    transition: 0.1s ease-out;
}

.form_cont:hover{
    box-shadow: 0 0 50px #ffffff68;
    transition: 0.3s ease-out;
}

#form_cont_img.badData{
    box-shadow: 0 0 50px #ff000084;
    transition: 0.3s ease-out;
}

.form_lbl{
    background: transparent;
    color: #e0e0f8;
    display: flex;
    justify-content: flex-start;
    white-space: nowrap;
    align-items: center;
    font-size: 20px;
    margin: 10px;
}

.ratio{
    margin-top: 2px;
    color: white;
}

.file_input{
    display: flex;
    cursor: pointer;
    background: transparent;
    justify-content: center;
    align-items: center;
    color: #f8dffd;
}

.ratio{
    background: transparent;
}

.rangeval{
    background: transparent;
    color:#cecedb;
    margin: 10px;
}

.format_cont{
    display: flex;
    width:200px;
    flex-direction: row;
    background: transparent;
    justify-content: center;
    align-items: center;
    height: 50px;
}

.format_selector{
    color: #cecedb;
    font-size: 25px;
    background: transparent;
    cursor:pointer;
    z-index: 9;
    transition: 0.1s ease;
}
#jpg{
    margin-right: 30px;
}
#txt{
    margin-left: 30px;
}

.format_selector:hover{
    font-size: 26px;
    color: #f0f0ff;
    transition: 0.1s ease;
}

#jpg:hover{
    margin-right: 28px;
    transition: 0.1s ease;
}

#txt:hover{
    margin-left: 28px;
    transition: 0.1s ease;
}

.border_selector{
    opacity: 0%;
    position: relative;
    top:0px;
    border-radius: 10px;
    left:-60px;
    padding:20px;
    padding-left: 35px;
    padding-right: 35px;
    background: transparent;
    border: 2px solid #cecedb;
    transition: 0.1s ease;
    z-index: -1;
}
#borde_selektor{
    z-index: 1;
    opacity:60%;
}

#borde_selektor.isJpg{
    left:-185px;
    transition: 0.1s ease;
}

#invert_txt{
    font-size: 30px;
    transition: 1s ease;
}
#invert_cont{
    cursor: pointer;
    transition: 1s ease;
}

#invert_cont.inverted{
    background: linear-gradient(to right, #cdccff, #dcb5ff);
    transition: 1s ease;
}

#invert_txt.inverted{
    color:#23152f;
    transition: 1s ease;
}


#generate_cont{
    overflow: hidden;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    cursor: pointer;
}
#generate_txt{
    display:flex;
    color: #cecedb;
    font-size: 30px;
    margin-right: 1470px;
    background: transparent;
    transition: 2s ease;
}
#loading_txt{
    left: 0px;
    color: #cecedb;
    font-size: 30px;
    letter-spacing: 10ch;
    margin-right: 200px;
    background: transparent;
    transition: 2s ease;
}
#loading_txt.loading{
    letter-spacing: 0ch;
    margin-right: 200px;
    margin-left: 180px;
    transition: 2s ease;
}
#generate_txt.loading{
    margin-right:-1470px;
    letter-spacing: 10ch;
    transition: 2s ease;
}


/* The typing effect */
@keyframes typing {
    from { width: 0 }
    to { width: 100% }
}
@keyframes typing2 {
    0% { width: 0; display: flex; }
    50% { width: 100%; display: flex; }
    78% {width:100%; display: flex;}
    95% {width: 0%; display: flex;}
    100%{ width: 0%; display: none; }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
    from, to { border-color: transparent }
    50% { border-color: rgb(255, 255, 255); }
}



@media screen and (max-width: 860px){
    /* home-demo */
    .heading{
        font-size: 60px;
    }
    #checkthis{
        font-size: 25px;
    }
    .check_cont{
        width: 250px;
    }

    .img2asci_cont{
        width: 330px;
    }
    .img2ascii{
        font-size: 3px;
        line-height: 150%;
    }
    .hero__description{
        font-size: 40px;
    }
    /* navbar */
    .navbar_menu{
        display: none;
        margin-right: -35px;
        flex-direction: row;
        transition: 0.2s ease-out;
    }
    .navbar_item{
        margin:9px;
    }
    .navbar_link{
        white-space: nowrap;
        font-size:14.5px;
        color:#a6a6b0
    }
    .navbar_burger{
        display: grid;
        justify-content: center;
        align-items: center;
        width: 40px;
        height: 40px;
        margin: 3px ;
        transition: all 0.3s ease-in-out;
        background: transparent;
        cursor:pointer;
    }
    .bar{
        width: 40px;
        height: 5px;
        margin: 2px;
        border-radius: 3px;
        background: #cecedb;
        transition: 0.2s ease;
    }
    .navbar_burger.isActive .bar:nth-child(1){
        transform: translateY(13.5px) rotate(45deg);
    }
    .navbar_burger.isActive .bar:nth-child(3){
        transform: translateY(-13.5px) rotate(-45deg);
    }
    .navbar_burger.isActive .bar:nth-child(2){
        opacity:0;
    }
    .navbar_menu.burgerActive{
        display: flex;
    }
    .navbar_logo.burgerActive{
        margin-left: -200px;
        transition: 0.2s ease-out;
    }
    .navbar_logo{
        font-size: 25px;
        margin:0;
        transition: 0.2s ease-out;
    }

    /* tryit  */
    .tryit_form{
        width: 100%;
    }
    .form_cont{
        margin:18px
    }
}

